<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".site.SiteActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/txt_menu_search"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        app:actionLayout="@layout/menu_search" />

    <item
        android:id="@+id/action_recommend"
        android:title="@string/txt_menu_recommend"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/txt_menu_favorite"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_favorite_off"
        app:actionLayout="@layout/menu_favorite" />

    <item
        android:id="@+id/action_viewnotread"
        android:title="@string/txt_menu_viewnotread"
        android:orderInCategory="500"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_view_off"
        app:actionLayout="@layout/menu_view" />

    <item
        android:id="@+id/action_viewall"
        android:title="@string/txt_menu_viewisdown"
        android:orderInCategory="600"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_view_off"
        app:actionLayout="@layout/menu_view" />

</menu>
