<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.sexspider4.list.ListActivity"
    android:id="@+id/constraintLayout">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:id="@+id/list_recyclerview"
            tools:listitem="@layout/list_list_view" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:text="@string/txt_list_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyText"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/list_empty_margin"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:src="@drawable/ic_action_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/float_button_padding"
        android:id="@+id/imageView"
        android:contentDescription="@string/txt_menu_refresh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/float_button_margin"
        android:background="@drawable/bg_float" />

    <ImageView
        android:src="@drawable/ic_action_view_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/float_button_padding"
        android:id="@+id/imageView2"
        android:contentDescription="@string/txt_menu_viewisdown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/float_button_margin"
        android:background="@drawable/bg_float" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tips_layout"
        android:background="@color/list_tips_bg">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="@dimen/list_item_height"
            android:layout_height="@dimen/list_item_height"
            android:id="@+id/tipsImage"
            android:contentDescription="@string/txt_image_thumb"
            android:layout_centerVertical="true" />

        <TextView
            android:text="@string/txt_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/list_item_height"
            android:id="@+id/tipsText"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toEndOf="@+id/tipsImage"
            android:layout_marginStart="@dimen/list_item_margin"
            android:layout_marginEnd="@dimen/list_item_margin" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
