<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/list_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_list_title"
        android:id="@+id/list_list_title"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginEnd="@dimen/list_item_margin" />

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:id="@+id/imageView"
        android:contentDescription="@string/txt_image_thumb"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/list_list_title"
        app:layout_constraintBottom_toBottomOf="@+id/list_list_title" />

    <ImageView
        android:src="@drawable/ic_action_favorite_on"
        android:layout_width="@dimen/list_favorite_height"
        android:layout_height="@dimen/list_favorite_height"
        android:padding="@dimen/list_favorite_margin"
        android:id="@+id/favoriteView"
        android:contentDescription="@string/txt_image_thumb"
        android:background="@drawable/bg_float"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginStart="@dimen/list_favorite_margin"
        android:layout_marginTop="@dimen/list_favorite_margin" />

    <ImageView
        android:src="@drawable/ic_action_video"
        android:layout_width="@dimen/list_favorite_height"
        android:layout_height="@dimen/list_favorite_height"
        android:padding="@dimen/list_favorite_margin"
        android:id="@+id/videoView"
        android:visibility="gone"
        android:contentDescription="@string/txt_image_thumb"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginStart="@dimen/list_favorite_margin"
        android:layout_marginTop="@dimen/list_favorite_margin" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/list_list_title"
        app:layout_constraintRight_toRightOf="@+id/list_list_title"
        app:layout_constraintBottom_toBottomOf="@+id/list_list_title" />

    <TextView
        android:text="@string/txt_list_loadnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintRight_toRightOf="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar" />

</android.support.constraint.ConstraintLayout>
